Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-hello
  annotations:
    argocd.argoproj.io/sync-wave: "0"
