Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  namespace: nginx-hello
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:stable-alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-html
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-hello-content
