Service,.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-svc
  namespace: nginx-hello
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
